# StepCOVNet

./: .editorconfig  .gitattributes  .gitignore  README.md  Sandbox.ipynb  arrow_placement.ipynb  arrow_placement_model_64.h5  arrow_prediction.py  experiment_process_helper.py  pyproject.toml  requirements.txt  stepmania_note_generator.py  timing_arrow_combiner.py  timing_prediction.py  timings_checker.ipynb  train.py  training_data_collection.py  wav_converter.py
common/: Fprev_sub.py  audio_preprocessing.py
configs/: arrow_baseline.json  onset_baseline.json
configuration/: parameters.py
data/: dataset_features.npz  labels.npz  sample_weights.npz  scaler.pkl
data_collection/: sample_collection_helper.py  training_data_collection.py  wav_converter.py
legacy_v1/: stepmania_note_generator.py  train.py  training_data_collection.py  wav_converter.py
legecy_v1/: stepmania_note_generator.py  train.py  training_data_collection.py  wav_converter.py
model_output/: 5_layers_cnn0.csv  model.csv
models/: arrow_placement_model.h5  callback_timing_model.h5  model.csv  model.h5  pretrained_timing_model.h5  pretrained_trained_model.csv  trained_model.csv  trained_model.h5
notebooks/: Sandbox.ipynb  timings_checker.ipynb  train_generate.ipynb  train_generate_demo.ipynb
output/: pred_txt_zombie_maker.txt
pred_arrows/: pred_arrows_0x1311.txt  pred_arrows_a_rendezvous_with_sleep_paralysis.txt  pred_arrows_after-school_stride.txt  pred_arrows_airwave.txt  pred_arrows_altair.txt  pred_arrows_animal_fortune-telling.txt  pred_arrows_area184.txt  pred_arrows_ascalon.txt  pred_arrows_ashtray.txt  pred_arrows_beautiful_loli_thing.txt  pred_arrows_blackbird.txt  pred_arrows_boysnshoujos_kingdom_bit_shifter_shoujoligarchy_mix.txt  pred_arrows_boysnshoujos_kingdom_daniel_seven_remix.txt  pred_arrows_brand_new_days.txt  pred_arrows_carmelia.txt  pred_arrows_chemical_slave.txt  pred_arrows_cheryl.txt  pred_arrows_color.txt  pred_arrows_common_world_domination.txt  pred_arrows_contact_explosive.txt  pred_arrows_dadadadadadadadadada.txt  pred_arrows_damage_plan.txt  pred_arrows_death_should_not_have_taken_thee.txt  pred_arrows_ecstatic_vivace.txt  pred_arrows_egg.txt  pred_arrows_electric_love.txt  pred_arrows_emblem.txt  pred_arrows_eternal_fantasy.txt  pred_arrows_exciting_hyper_highspeed_star.txt  pred_arrows_family_dondon.txt  pred_arrows_fantasy_world_repair_girl.txt  pred_arrows_feel_ma_beat.txt  pred_arrows_final_dance.txt  pred_arrows_first_kiss.txt  pred_arrows_flamberge.txt  pred_arrows_for_ultraplayers.txt  pred_arrows_freedom.txt  pred_arrows_future_dominators.txt  pred_arrows_game_start.txt  pred_arrows_ginback.txt  (+66 more)
pred_timings/: pred_timings_0x1311.txt  pred_timings_a_rendezvous_with_sleep_paralysis.txt  pred_timings_abracadabra.txt  pred_timings_after-school_stride.txt  pred_timings_airwave.txt  pred_timings_altair.txt  pred_timings_animal_fortune-telling.txt  pred_timings_area184.txt  pred_timings_ascalon.txt  pred_timings_ashtray.txt  pred_timings_bad_dracula.txt  pred_timings_beautiful_loli_thing.txt  pred_timings_blackbird.txt  pred_timings_boombayah.txt  pred_timings_boysnshoujos_kingdom_bit_shifter_shoujoligarchy_mix.txt  pred_timings_boysnshoujos_kingdom_daniel_seven_remix.txt  pred_timings_brand_new_days.txt  pred_timings_carmelia.txt  pred_timings_cheer_up.txt  pred_timings_chemical_slave.txt  pred_timings_cheryl.txt  pred_timings_color.txt  pred_timings_common_world_domination.txt  pred_timings_contact_explosive.txt  pred_timings_dadadadadadadadadada.txt  pred_timings_damage_plan.txt  pred_timings_death_should_not_have_taken_thee.txt  pred_timings_ecstatic_vivace.txt  pred_timings_egg.txt  pred_timings_electric_love.txt  pred_timings_emblem.txt  pred_timings_eternal_fantasy.txt  pred_timings_exciting_hyper_highspeed_star.txt  pred_timings_family_dondon.txt  pred_timings_fantasy_world_repair_girl.txt  pred_timings_feel_ma_beat.txt  pred_timings_final_dance.txt  pred_timings_first_kiss.txt  pred_timings_flamberge.txt  pred_timings_for_ultraplayers.txt  (+104 more)
pred_txts/: pred_txt_0x1311.txt  pred_txt_a_rendezvous_with_sleep_paralysis.txt  pred_txt_after-school_stride.txt  pred_txt_airwave.txt  pred_txt_altair.txt  pred_txt_animal_fortune-telling.txt  pred_txt_area184.txt  pred_txt_ascalon.txt  pred_txt_ashtray.txt  pred_txt_beautiful_loli_thing.txt  pred_txt_blackbird.txt  pred_txt_boysnshoujos_kingdom_bit_shifter_shoujoligarchy_mix.txt  pred_txt_boysnshoujos_kingdom_daniel_seven_remix.txt  pred_txt_brand_new_days.txt  pred_txt_carmelia.txt  pred_txt_chemical_slave.txt  pred_txt_cheryl.txt  pred_txt_color.txt  pred_txt_common_world_domination.txt  pred_txt_contact_explosive.txt  pred_txt_dadadadadadadadadada.txt  pred_txt_damage_plan.txt  pred_txt_death_should_not_have_taken_thee.txt  pred_txt_ecstatic_vivace.txt  pred_txt_egg.txt  pred_txt_electric_love.txt  pred_txt_emblem.txt  pred_txt_eternal_fantasy.txt  pred_txt_exciting_hyper_highspeed_star.txt  pred_txt_family_dondon.txt  pred_txt_fantasy_world_repair_girl.txt  pred_txt_feel_ma_beat.txt  pred_txt_final_dance.txt  pred_txt_first_kiss.txt  pred_txt_flamberge.txt  pred_txt_for_ultraplayers.txt  pred_txt_freedom.txt  pred_txt_future_dominators.txt  pred_txt_game_start.txt  pred_txt_ginback.txt  (+67 more)
scripts/: generate.py  stepmania_note_generator.py  train_arrow.py  train_onset.py  training_data_collection.py  wav_converter.py
scripts_common/: audio_preprocessing.py  parameters.py  utilFunctions.py
scripts_data_collection/: training_data_collection.py
scripts_training/: architectures.py  data_preparation.py  modeling.py  network.py  stepcovnet.py  stepnet.py  train.py
scripts_wrapper/: arrow_prediction.py  timing_arrow_combiner.py  timing_prediction.py  wav_converter.py
src/: audio_preprocessing.py  resnet_blocks.py  schluterParser.py  stepmania_note_generator.py  train.py  utilFunctions.py
stepcovnet/: config.py  constants.py  data.py  dataset.py  encoder.py  executor.py  inputs.py  mel_features.py  model.py  sample_collection_helper.py  stepmania_note_generator.py  tf_config.py  training.py  utils.py
(+445 files in other folders)
