[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stepcovnet"
version = "2.0.0"
description = "Audio to StepMania note generator using convolutional neural networks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache License 2.0" }
authors = [
    { name = "cpuguy96" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["stepmania", "rhythm-game", "music", "neural-network", "deep-learning"]

# Runtime dependencies
dependencies = [
    "tensorflow>=2.19.0",
    "librosa>=0.11.0",
    "scipy>=1.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/cpuguy96/StepCOVNet"
Repository = "https://github.com/cpuguy96/StepCOVNet.git"
Issues = "https://github.com/cpuguy96/StepCOVNet/issues"

# ------------------------------------------------------------------
# Tool Configurations
# ------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]
include = ["stepcovnet*"]
namespaces = false

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short --cov=stepcovnet"
testpaths = ["tests"]
python_files = ["*_test.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# Coverage Configuration
[tool.coverage.run]
source = ["stepcovnet"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
